Added Email sending service.

--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,18 @@
       <version>2.10.1</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.mindrot</groupId>
+      <artifactId>jbcrypt</artifactId>
+      <version>0.3m</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.sun.mail</groupId>
+      <artifactId>javax.mail</artifactId>
+      <version>1.6.2</version> <!-- Or the latest version -->
+    </dependency>
+
   </dependencies>
 
   <build>
