--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -4,4 +4,4 @@ selected_db=mysql
 # MYSQL DB
 mysql.url=jdbc:mysql://127.0.0.1:3306/lab_appointment_db
 mysql.username=root
-mysql.password=
+mysql.password=imesh562
