Add appointment is in progress.

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -103,7 +103,7 @@
 
   <servlet-mapping>
     <servlet-name>NewAppointmentController</servlet-name>
-    <url-pattern>/GetLabTests</url-pattern>
+    <url-pattern>/AddNewAppointment</url-pattern>
   </servlet-mapping>
 </web-app>
 
